syntax = "proto3";

import "util/tracing/proto/tracing.proto";

option go_package = "sigmaos/apps/hotel/proto";

service Rec {
  rpc GetRecs(RecReq) returns (RecRep);
}

message RecReq {
  string require = 1;
  double lat = 2;
  double lon = 3;
  SpanContextConfig spanContextConfig = 4;
}

message RecRep {
  repeated string hotelIds = 1;
}
