syntax = "proto3";

import "util/tracing/proto/tracing.proto";

option go_package = "sigmaos/apps/hotel/proto";

service User {
  rpc MakeReservation(UserReq) returns (HotelUserRep);
  rpc CheckAvailability(UserReq) returns (HotelUserRep);
}

message UserReq {
	string name = 1;
	string password = 2;
  SpanContextConfig spanContextConfig = 3;
}

message HotelUserRep {
  string oK = 1;
}
